# Herringbone

./: .gitignore  CONTRIBUTING.md  README.md  ci-deploy-key.pub  pyproject.toml  requirements-dev.txt
.github/: dependabot.yml
.github/workflows/: build-test-push-mind-recon.yml  build-test-push-receiver.yml  build-test-push-sign.yml  build-test-push.yml  detectionengine-detector.yml  detectionengine-matcher.yml  detectionengine-ruleset.yml  enrichment.yml  herringbone-apps.yml  herringbone-auth.yml  herringbone-logs.yml  herringbone-search.yml  receiver.yml  (+12 more)
cert-manager/: argocd-herringbone-dev-tls.yaml  argocd-server-ingress.yaml  clusterissuer.yaml
detectionengine/: Makefile  README.md
docker/: Makefile  compose.detectionengine.detector.yml  compose.detectionengine.matcher.yml  compose.detectionengine.ruleset.yml  compose.herringbone.auth.yml  compose.herringbone.logs.yml  compose.herringbone.search.yml  compose.incidents.correlator.yml  compose.incidents.incidentset.yml  compose.incidents.orchestrator.yml  compose.logingestion.receiver.yml  compose.mongo.yml  compose.operations.center.yml  compose.parser.cardset.yml  compose.parser.enrichment.yml  compose.parser.extractor.yml  compose.proxy.yml  docker-compose.yml  init-mongo.js  nginx.conf
docs/: AUTHENTICATION.md  PORTMAP.md  STANDARDS.md  TESTING.md  api-development-guidelines.md
herringbone/: app.py  requirements.text
incidents/: Makefile  README.md
kustomize/: deployment.yaml  service.yaml
logingestion/: README.md
modules/: pyproject.toml
parser/: Makefile  README.md
platform/: release.yaml
(+374 files in other folders)
